<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/destinationLbl"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="Set a destination"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchRideBtn"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="72dp"
        android:text="Search Rides"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/californiaGold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/searchTxtBox"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="Destination"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationLbl" />

    <TextView
        android:id="@+id/searchDate"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="Set a date"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTxtBox" />

    <Button
        android:id="@+id/dateBtn"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:layout_alignBottom="@+id/searchDate"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/searchDate"
        android:layout_toRightOf="@+id/searchDate"
        android:backgroundTint="@color/californiaGold"
        android:text="SELECT DATE"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchDate" />

    <TextView
        android:id="@+id/timeLbl"
        android:layout_width="212dp"
        android:layout_height="30dp"
        android:layout_below="@+id/searchDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Set arrival time"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/searchRideBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateBtn"
        app:layout_constraintVertical_bias="0.215" />

    <Button
        android:id="@+id/timeBtn"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:layout_below="@+id/dateBtn"
        android:layout_alignStart="@+id/dateBtn"
        android:layout_alignLeft="@+id/dateBtn"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/californiaGold"
        android:text="SELECT TIME"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/searchRideBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeLbl"
        app:layout_constraintVertical_bias="0.035" />

</androidx.constraintlayout.widget.ConstraintLayout>